[package]
name = "sql-insight"
description = "A utility for SQL query analysis, formatting, and transformation."
documentation = "https://docs.rs/sql-insight/"
keywords = ["sql", "query", "utility", "insight"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
name = "sql_insight"
path = "src/lib.rs"

[dependencies]
sqlparser = { version = "0.56.0", features = ["visitor"], git = "https://github.com/planetscale/sqlparser-private", rev = "9716e35f5c16a05bf278229eafc237d2467583c4" }
thiserror = "1.0.56"


